# lodestar

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cursor/: PRODUCT_MANIFEST.md
docs/: ADVERSARIAL_REVIEW_2026-05-18.md  DEMO_SCRIPT.md  MANIFEST.md  OVERNIGHT_2026-05-17.md  PASS_4.5_FINDINGS.md  PRIOR_ART.md  REVIEW_2026-05-17.md  WORKED_ESCALATION.md  WRITEUP.md
docs/superpowers/plans/: 2026-05-17-architecture.md  2026-05-17-pass-4_5-findings.md  2026-05-17-pass5A-tasks.md  2026-05-17-pass5B-tasks.md  2026-05-17-pass5C-tasks.md  2026-05-17-pass5D-tasks.md  2026-05-17-ranker.md
docs/superpowers/specs/: 2026-05-17-ranker-design.md
reports/: aider-week.csv  aider-week.md  escalation-aider-5131-benchmark-flag-mismatch.md
scripts/: form_check_score.py  run_mutmut.sh
scripts/repro/aider-5131/: repro.sh
tests/: test_smoke.py
tests/analytics/: test_themes.py
tests/ci/: test_workflow_yaml.py
tests/dedup/: conftest.py  test_cli_smoke.py  test_dedup_cli.py  test_dedup_cli_semantic.py  test_fuzzy.py  test_golden_aider_smoke.py  test_invariants.py  test_semantic.py  test_tfidf.py  test_thresholds.py
tests/escalation/: conftest.py  test_bug_repro_template.py  test_handoff_template.py  test_playwright_smoke.py
tests/escalation/pages/: base_page.py
tests/fixtures/: aider_smoke_66.parquet
tests/ingest/: test_aider.py  test_cli_idempotency.py  test_cli_smoke.py  test_cline_continue.py  test_github_client.py  test_parquet_io.py
tests/moderate/: conftest.py  test_patterns.py  test_pipeline.py
tests/rank/: conftest.py  test_calibrate.py  test_cli.py  test_invariants.py  test_ranker.py  test_score.py  test_signals.py  test_thresholds.py
tests/report/: conftest.py  test_rationale_csv.py
tests/schema/: test_issue.py
tests/scripts/: test_form_check.py
tests/writeup/: test_demo_script.py  test_manifest.py  test_writeup_skeleton.py
voc/: __init__.py
voc/analytics/: __init__.py  themes.py
voc/classify/: __init__.py
voc/dedup/: __init__.py  __main__.py  _union_find.py  fuzzy.py  semantic.py  tfidf.py
voc/ingest/: __init__.py  __main__.py  _mapper.py  aider.py  cline.py  continue_.py  github_client.py  parquet_io.py
voc/moderate/: __init__.py  __main__.py  patterns.py
voc/rank/: __init__.py  __main__.py  ranker.py  score.py  signals.py
voc/report/: __init__.py  rationale_csv.py
voc/schema/: issue.py
