[project]
name = "lodestar"
version = "0.1.0"
description = "Public Voice-of-Customer pipeline for agentic coding tools. v0 demonstration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wei Jia" }]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=15.0,<26.0",
    "rapidfuzz>=3.6,<4.0",
    "scikit-learn>=1.4,<2.0",
    "tenacity>=8.2,<10.0",
    "python-dateutil>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
    "ruff>=0.4",
    "mypy>=1.9",
    "respx>=0.20",
    "PyYAML>=6.0",  # for tests/ci/test_workflow_yaml.py
    "pandas-stubs>=2.2,<3.0",  # mypy stubs; cap matches parent pandas pin
    "scipy-stubs>=1.14,<2.0",  # mypy stubs; scipy is transitive via scikit-learn
]
escalation = [
    "playwright>=1.45",
    "pytest-playwright>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voc"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["mutants/", ".mutmut-cache/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
timeout = 30
testpaths = ["tests"]
markers = [
    "escalation: Playwright browser tests (requires pip install -e '.[escalation]')",
]

[tool.mutmut]
paths_to_mutate = ["voc/dedup/", "voc/rank/", "voc/moderate/", "voc/report/"]
tests_dir = ["tests/dedup/", "tests/rank/", "tests/moderate/", "tests/report/"]
# Copy the non-mutated voc/ pieces so tests can import them. mutmut's sandbox
# only mirrors paths_to_mutate by default, which would leave voc.schema etc.
# unresolvable when conftest.py loads.
also_copy = ["voc/__init__.py", "voc/schema", "voc/ingest"]
debug = false
runner = "python -m pytest tests/dedup/ tests/rank/ tests/moderate/ tests/report/ --timeout 10 -x -q --no-header"
